# Codex-Pool

./: Cargo.toml  README.md  docker-compose.personal.yml  docker-compose.team.yml  docker-compose.yml
.codex/docs/plans/: 2026-03-20-repo-edition-architecture-refactor-plan.md  20260313-001455-repo-personal-team-business-plan.md
.github/workflows/: build-images.yml  ci.yml
crates/codex-pool-core/src/: api.rs  edition.rs  events.rs  logging.rs  model.rs  snapshot.rs
docker/: .env.business.example  .env.personal.example  .env.production.example  .env.team.example  nginx.frontend.conf  rust-runtime.Dockerfile
docs/: editions-and-migration.md  responses-api-compatibility-matrix.md
docs/plans/: 2026-03-10-dashboard-compact-number-design.md  2026-03-10-dashboard-compact-number.md  2026-03-10-frontend-count-format-expansion-design.md  2026-03-10-frontend-count-format-expansion.md  2026-03-11-data-plane-402-failover.md  2026-03-17-frontend-page-archetypes.md  2026-03-18-codex-rate-limit-compat-design.md  2026-03-18-frontend-redesign-baseline-reset-design.md  2026-03-18-frontend-redesign-baseline-reset.md
docs/superpowers/specs/: 2026-03-30-openai-model-catalog-rich-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: count-format.regression.mjs  dashboard-number-format.regression.mjs
frontend/scripts/i18n/: check-key-parity.mjs
frontend/src/: App.tsx  app-shell.routes.test.ts  auth-parity-regression.test.ts  backend-parity-regression.test.ts  button-semantics-regression.test.ts  hero.ts  i18n-leak-audit-regression.test.ts  i18n.ts  index.css  main.tsx  workbench-copy-cleanup-regression.test.ts
frontend/src/api/: accounts.ts  adminAuth.ts  adminTenants.ts  aiErrorLearning.ts  aiRouting.ts  auditLogs.ts  billing.ts  client.ts  dashboard.ts  errorI18n.ts  eventStream.ts  groups.ts  httpClient.ts  importJobs.ts  logs.ts  modelRouting.ts  models.ts  oauthImport.ts  parity.test.ts  proxies.ts  requestLogs.ts  settings.ts  system.defaults.ts  system.ts  tenantAuth.ts  tenantClient.ts  tenantCredits.ts  tenantKeys.ts  tenantUsage.ts  tenants.ts  types.ts  usage.ts
frontend/src/components/: DataTable.tsx  LanguageToggle.tsx  Threads.tsx  data-table-design-regression.test.ts  theme-context.ts  theme-provider.tsx  threads-utils.test.ts  threads-utils.ts  ui-preferences-context.ts  ui-preferences-provider.tsx  use-theme.ts  use-ui-preferences.ts
frontend/src/lib/: chart-theme.ts  count-number-format.ts  dashboard-chart-a11y.test.ts  dashboard-chart-a11y.ts  dashboard-chart-theme.ts  dashboard-number-format.ts  design-system.test.ts  design-system.ts  duration-format.test.ts  duration-format.ts  edition-shell-routing.test.ts  edition-shell-routing.ts  motion-presets.test.ts  motion-presets.ts  page-archetypes.test.ts  page-archetypes.ts  seo.ts  theme-preferences.ts  time.ts  ui-preferences.test.ts  (+2 more)
scripts/: run_personal_dev.sh
services/control-plane/: Cargo.toml  build.rs
services/control-plane/src/: admin_auth.rs  app.rs  config.rs  contracts.rs  cost.rs  edition_migration.rs  import_jobs.rs  lib.rs  main.rs  oauth.rs  outbound_proxy_runtime.rs  runtime_profile.rs  single_binary.rs  store.rs  system_events.rs  tenant.rs  test_support.rs  upstream_error_learning.rs
services/control-plane/src/app/: core_handlers.rs  tail_handlers.rs
services/control-plane/src/app/core_handlers/: account_access.rs  account_tenant_admin.rs  ai_error_learning.rs  base.rs  billing_runtime.rs  internal_metrics.rs  models_probe.rs
services/control-plane/src/app/tail_handlers/: import_jobs.rs  logs_usage.rs  policies_snapshot.rs  system_events.rs
services/control-plane/src/import_jobs/manager_impl/: execution_and_tests.rs  manager_core.rs  parsing.rs
services/control-plane/src/store/: defs.rs  family_snapshot.rs  in_memory_core.rs  migration.rs  oauth_ops.rs  postgres.rs  sqlite_backed.rs  trait_impl.rs
services/control-plane/src/store/postgres/: helpers_trait.rs
services/control-plane/src/store/postgres/impl_crud/: bootstrap_schema.rs  oauth_upsert.rs  tenant_accounts.rs
services/control-plane/src/store/postgres/impl_oauth_snapshot/: model_routing.rs  rate_limit_jobs.rs  vault_activation.rs
services/control-plane/src/tenant/: admin_ops.rs  api_key_groups.rs  api_keys_credits.rs  audit_and_utils.rs  billing_reconcile.rs  openai_catalog_sync.rs  types_and_runtime.rs
services/control-plane/src/usage/: clickhouse_repo.rs  migration.rs  mod.rs  postgres_repo.rs  sqlite_repo.rs  worker.rs
services/control-plane/src/usage/clickhouse_repo/: prelude.rs
services/control-plane/tests/: admin_usage_scoped_api.rs  dashboard_logs_billing_e2e.rs  integration.rs  internal_metrics_api.rs  liveness_api.rs  outbound_proxy_runtime.rs  postgres_repo.rs  readiness_api.rs  request_logs_api.rs  system_event_stream_api.rs  usage_account_leaderboard_api.rs  usage_api.rs  usage_apikey_leaderboard_api.rs  usage_hourly_tenant_trends_api.rs  usage_hourly_trends_api.rs  usage_leaderboard_api.rs  usage_leaderboard_overview_api.rs  usage_summary_api.rs
services/control-plane/tests/api/: ai_routing_admin.rs  base_and_core_part1.rs  base_and_core_part2.rs  import_and_oauth.rs
services/control-plane/tests/support/: mod.rs
services/control-plane/tests/usage_worker/: base_and_backoff.rs  run_loop_part1.rs
services/data-plane/: Cargo.toml
services/data-plane/src/: auth.rs  outbound_proxy_runtime.rs  router.rs  snapshot.rs  test_support.rs  upstream_health.rs
services/data-plane/src/app/: bootstrap.rs  internal_debug.rs
services/data-plane/src/auth/: validator.rs
services/data-plane/src/event/: http_sink.rs
services/data-plane/src/proxy/: billing_stream.rs  entry.rs  request_utils.rs  responses_api.rs  ws_utils.rs
services/data-plane/tests/: auth_middleware.rs  billing_compact_pricing.rs  compatibility.rs  compatibility_ws.rs  e2e_proxy_snapshot.rs  integration.rs  internal_metrics.rs  outbound_proxy_runtime.rs  router_health.rs  snapshot_sync.rs
services/data-plane/tests/cases/: rate_limit_compat.rs
services/data-plane/tests/support/: mod.rs
(+108 files in other folders)
