[workspace]
members = [
  "crates/codex-pool-core",
  "services/data-plane",
  "services/control-plane",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Codex-Pool"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "form", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
toml = "1"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
bcrypt = "0.18"

[workspace.dependencies.redis]
version = "1"
default-features = false
features = ["tokio-comp"]

[workspace.dependencies.wiremock]
version = "0.6"

[workspace.dependencies.assert-json-diff]
version = "2"
