[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clickhouse = "0.14"
codex-pool-core = { path = "../../crates/codex-pool-core" }
reqwest.workspace = true
regex.workspace = true
sqlx-core = { version = "=0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "uuid"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["chrono", "uuid"] }
serde.workspace = true
serde_json.workspace = true
redis = { workspace = true, features = ["streams"] }
rand = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
hmac = "0.12"
jsonwebtoken.workspace = true
bcrypt.workspace = true
bytes.workspace = true
futures-util.workspace = true
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }

[dev-dependencies]
assert-json-diff.workspace = true
