[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
autotests = false

[features]
default = []
clickhouse-backend = ["dep:clickhouse"]

[[test]]
name = "integration"
path = "tests/integration.rs"

[[bin]]
name = "codex-pool-personal"
path = "src/bin/codex-pool-personal.rs"

[[bin]]
name = "codex-pool-team"
path = "src/bin/codex-pool-team.rs"

[[bin]]
name = "codex-pool-business"
path = "src/main.rs"
required-features = ["clickhouse-backend"]

[[bin]]
name = "usage-worker"
path = "src/bin/usage-worker.rs"
required-features = ["clickhouse-backend"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clickhouse = { version = "0.14", default-features = false, optional = true }
codex-pool-core = { path = "../../crates/codex-pool-core" }
data-plane = { path = "../data-plane" }
reqwest.workspace = true
regex.workspace = true
include_dir = "0.7"
sqlx-core = { version = "=0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-aws-lc-rs", "chrono", "uuid"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["chrono", "uuid"] }
sqlx-sqlite = { version = "=0.8.6", default-features = false, features = ["chrono", "uuid", "bundled"] }
serde.workspace = true
serde_json.workspace = true
redis = { workspace = true, features = ["streams"] }
rand = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
hmac = "0.12"
jsonwebtoken.workspace = true
bcrypt.workspace = true
bytes.workspace = true
futures-util.workspace = true
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "webpki-roots", "aws-lc-rs"] }

[dev-dependencies]
assert-json-diff.workspace = true
wiremock.workspace = true
